--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "homepage": "https://www.claim.primarykeytech.in",
+    "homepage": "https://online-exam.primarykeytech.in",
     "scripts": {
         "dev": "npm run development",
         "development": "mix",
