--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@hookform/error-message": "^2.0.1",
         "@material-ui/core": "^4.12.4",
         "@material-ui/pickers": "^3.3.10",
+        "@mui/icons-material": "^5.11.0",
         "@mui/lab": "^5.0.0-alpha.108",
         "@mui/material": "^5.11.6",
         "@mui/styles": "^5.10.15",
@@ -48,6 +49,7 @@
         "react-bootstrap": "^2.7.0",
         "react-bootstrap-daterangepicker": "^8.0.0",
         "react-burger-menu": "^2.7.1",
+        "react-drag-drop-files": "^2.3.8",
         "react-geocode": "^0.2.3",
         "react-hook-form": "^7.41.0",
         "react-image-zoom": "^1.3.1",
