--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
         "@hookform/error-message": "^2.0.1",
         "@material-ui/core": "^4.12.4",
         "@material-ui/pickers": "^3.3.10",
         "@mui/icons-material": "^5.11.0",
         "@mui/lab": "^5.0.0-alpha.108",
-        "@mui/material": "^5.11.6",
+        "@mui/material": "^5.11.11",
         "@mui/styles": "^5.10.15",
         "@mui/x-data-grid": "^5.17.14",
         "@mui/x-date-pickers": "^5.0.8",
@@ -55,6 +55,7 @@
         "react-image-zoom": "^1.3.1",
         "react-infinite-scroll-component": "^4.1.0",
         "react-owl-carousel": "^2.3.3",
+        "react-player": "^2.11.2",
         "react-router-dom": "^6.4.3",
         "react-slick": "^0.29.0",
         "react-table": "^6.6.0",
