--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@mui/x-date-pickers": "^5.0.8",
         "@syncfusion/ej2-react-navigations": "^20.3.57",
         "bootstrap-daterangepicker": "^3.1.0",
+        "crypto-js": "^4.1.1",
         "dayjs": "^1.11.6",
         "jquery": "^3.6.1",
         "jquery-ui": "^1.13.2",
